website/web/static/tree.css
.node circle {
  fill: #fff;
  stroke: steelblue;
  stroke-width: 3px;
}

.node text {
  font: 12px sans-serif;
}

.link {
  fill: none;
  stroke: #ccc;
  stroke-width: 2px;
}

#menu_container {
  position: fixed;
  top: 5px;
  left: 5px;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}

#menu {
  position: fixed;
  top: 5px;
  left: 5px;
  background: white;
  border: 2px solid;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}

#menu_container .menu-header {
	width: 200px;
	height: 110px;
	resize: both;
}

#menu_container ul.components {
    padding: 20px 0;
}

#menu_container ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}

#menu_container ul li a:hover {
    background: #fff;
}

.blur {
  filter: blur(10px);
}

#legend_container {
  position: fixed;
  bottom: 5px;
  right: 5px;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}

#legend {
  position: fixed;
  bottom: 5px;
  right: 5px;
  background: white;
  border: 2px solid;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}

#tree-details_container {
  position: fixed;
  top: 5px;
  right: 5px;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}

#tree-details {
  position: fixed;
  top: 5px;
  right: 5px;
  background: white;
  border: 2px solid;
  padding-top: 5px;
  padding-right: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
}

.tooltip {
    position: absolute;
    text-align: left;
    padding: 2px;
    font: 12px sans-serif;
    background: lightsteelblue;
    border: 0px;
    border-radius: 8px;
    z-index: 1;
    border: 2px solid;
    padding-top: 5px;
    padding-right: 5px;
    padding-bottom: 5px;
    padding-left: 5px;
}

.tooltip text {
  font: 15px sans-serif;
  z-index: 2;
}

hr {
  display: block;
  margin-top: 0.1em;
  margin-bottom: 0.5em;
  margin-left: auto;
  margin-right: auto;
  border-color: black;
  border-style: inset;
  border-width: 1px;
}

table {
  table-layout: fixed;
}

table td p {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

[data-toggle="collapse"].collapsed .if-not-collapsed {
  display: none;
  }
[data-toggle="collapse"]:not(.collapsed) .if-collapsed {
  display: none;
}

